--- a/ejemplo2/index.html
+++ b/ejemplo2/index.html
@@ -51,7 +51,8 @@
 		</div>
 	</div>
 	<!-- Carousel -->
-	<div id="carruselProductos" class="carousel slide row justify-content-around" data-ride="carousel">
+	<div class="container-fluid">
+		<div id="carruselProductos" class="carousel slide row justify-content-around" data-ride="carousel">
 		<a class="carousel-control-prev boton col-md-2 col-sm-2" href="#carruselProductos" role="button" data-slide="prev">
 	    	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 	    	<span class="sr-only">Previous</span>
@@ -108,6 +109,8 @@
 	    	<span class="sr-only">Next</span>
 	  	</a>
 	</div>
+	</div>
+	
 
 	 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
