--- a/ejemplo2/index.html
+++ b/ejemplo2/index.html
@@ -53,103 +53,99 @@
 	<!-- Carousel -->
 	<div class="container-fluid">
 		<div id="carruselProductos" class="carousel slide row justify-content-around" data-ride="carousel">
-		<a class="carousel-control-prev boton col-md-2 col-sm-2" href="#carruselProductos" role="button" data-slide="prev">
-	    	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	    	<span class="sr-only">Previous</span>
-	  	</a>
-	  	<div class="carousel-inner col-md-8 col-sm-8">
-	    	<div class="carousel-item active">
-	    		<div class="row">
-	    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
-	    				<img class="muestra" src="img/productos/americano.jpg" alt="americano">
-	    			</div>
-	    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
-	    				<img class="muestra" src="img/productos/cafebombon.jpg" alt="cafe bombon">
-	    			</div>
-	    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
-	    				<img class="muestra" src="img/productos/cafelattecaliente.jpg" alt="cafe latte caliente">
-	    			</div>
-	    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
-	    				<img class="muestra" src="img/productos/cafelattefrio.jpg" alt="cafe latte frio">
-	    			</div>
-	    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
-	    				<img class="muestra" src="img/productos/capuccino.jpg" alt="capuccino">
-	    			</div>
-	    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
-	    				<img class="muestra" src="img/productos/capuccinocasa.jpg" alt="capuccino casa">
-	    			</div>
-	    		</div>
-	    	</div>
-	    	<div class="carousel-item">
-	      		<div class="row">
-	    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
-	    				<img class="muestra" src="img/productos/capuccinofrio.jpg" alt="capuccino frio">
-	    			</div>
-	    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
-	    				<img class="muestra" src="img/productos/espresso.jpg" alt="espresso">
-	    			</div>
-	    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
-	    				<img class="muestra" src="img/productos/frappelatte.jpg" alt="frappe latte">
-	    			</div>
-	    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
-	    				<img class="muestra" src="img/productos/macchiato.jpg" alt="macchiato">
-	    			</div>
-	    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
-	    				<img class="muestra" src="img/productos/moccachino.jpg" alt="moccachino">
-	    			</div>
-	    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
-	    				<img class="muestra" src="img/productos/oreocookieshake.jpg" alt="oreo cookie shake">
-	    			</div>
-	    		</div>
-	    	</div>
-	  	</div>
-	  	
-	  	<a class="carousel-control-next boton col-md-2 col-sm-2" href="#carruselProductos" role="button" data-slide="next">
-	    	<span class="carousel-control-next-icon" aria-hidden="true"></span>
-	    	<span class="sr-only">Next</span>
-	  	</a>
-	</div>
+			<a class="carousel-control-prev boton col-md-2 col-sm-2" href="#carruselProductos" role="button" data-slide="prev">
+		    	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		    	<span class="sr-only">Previous</span>
+		  	</a>
+		  	<div class="carousel-inner col-md-8 col-sm-8">
+		    	<div class="carousel-item active">
+		    		<div class="row">
+		    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
+		    				<img class="muestra" src="img/productos/americano.jpg" alt="americano">
+		    			</div>
+		    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
+		    				<img class="muestra" src="img/productos/cafebombon.jpg" alt="cafe bombon">
+		    			</div>
+		    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
+		    				<img class="muestra" src="img/productos/cafelattecaliente.jpg" alt="cafe latte caliente">
+		    			</div>
+		    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
+		    				<img class="muestra" src="img/productos/cafelattefrio.jpg" alt="cafe latte frio">
+		    			</div>
+		    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
+		    				<img class="muestra" src="img/productos/capuccino.jpg" alt="capuccino">
+		    			</div>
+		    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
+		    				<img class="muestra" src="img/productos/capuccinocasa.jpg" alt="capuccino casa">
+		    			</div>
+		    		</div>
+		    	</div>
+		    	<div class="carousel-item">
+		      		<div class="row">
+		    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
+		    				<img class="muestra" src="img/productos/capuccinofrio.jpg" alt="capuccino frio">
+		    			</div>
+		    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
+		    				<img class="muestra" src="img/productos/espresso.jpg" alt="espresso">
+		    			</div>
+		    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
+		    				<img class="muestra" src="img/productos/frappelatte.jpg" alt="frappe latte">
+		    			</div>
+		    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
+		    				<img class="muestra" src="img/productos/macchiato.jpg" alt="macchiato">
+		    			</div>
+		    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
+		    				<img class="muestra" src="img/productos/moccachino.jpg" alt="moccachino">
+		    			</div>
+		    			<div class="col-md-2 col-sm-2 in-line-block center-block item-div">
+		    				<img class="muestra" src="img/productos/oreocookieshake.jpg" alt="oreo cookie shake">
+		    			</div>
+		    		</div>
+		    	</div>
+		  	</div>
+		  	<a class="carousel-control-next boton col-md-2 col-sm-2" href="#carruselProductos" role="button" data-slide="next">
+		    	<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		    	<span class="sr-only">Next</span>
+		  	</a>
+		</div>
 	</div>
 	
 
 	<div class="container-fluid" id="tipos-cafe">
 		<h2>Tipos de Café</h2>
         <!-- Example row of columns -->
-        <div class="row">
-          <div class="col-md-2">
-          	<img class="rounded-circle" src="img/productos/americano.jpg" alt="americano">
-            <h3>Americano</h3>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div>
-          <div class="col-md-2">          	
-          	<img class="rounded-circle" src="img/productos/cafebombon.jpg" alt="cafe bombon">
-            <h3>Café Bombón</h3>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div>
-          <div class="col-md-2">
-          	<img class="rounded-circle" src="img/productos/cafelattecaliente.jpg" alt="cafe latte caliente">
-            <h3>Café Latte</h3>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div>
-          <div class="col-md-2">
-          	<img class="rounded-circle" src="img/productos/capuccino.jpg" alt="capuccino">
-            <h3>Capuccino</h3>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div>
-          <div class="col-md-2">
-          	<img class="rounded-circle" src="img/productos/moccachino.jpg" alt="moccachino">
-            <h3>Moccachino</h3>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div>
+        <div class="row justify-content-around">
+          	<div class="col-md-2">
+          		<img class="rounded-circle" src="img/productos/americano.jpg" alt="americano">
+            	<h3>Americano</h3>
+            	<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            	<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          	</div>
+          	<div class="col-md-2">          	
+	          	<img class="rounded-circle" src="img/productos/cafebombon.jpg" alt="cafe bombon">
+    	        <h3>Café Bombón</h3>
+        	    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+	            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+    	    </div>
+        	<div class="col-md-2">
+          		<img class="rounded-circle" src="img/productos/cafelattecaliente.jpg" alt="cafe latte caliente">
+            	<h3>Café Latte</h3>
+            	<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            	<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          	</div>
+          	<div class="col-md-2">
+          		<img class="rounded-circle" src="img/productos/capuccino.jpg" alt="capuccino">
+            	<h3>Capuccino</h3>
+            	<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            	<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          	</div>
+          	<div class="col-md-2">
+          		<img class="rounded-circle" src="img/productos/moccachino.jpg" alt="moccachino">
+            	<h3>Moccachino</h3>
+            	<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            	<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+	        </div>
         </div>
-
-        <hr>
-
     </div>
 	
 	
